// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document manifest returns the correct formatting for mimetype 1`] = `
Object {
  "manifest:manifest": Object {
    "manifest:file-entry": Array [
      Object {
        "manifest:full-path": "/",
        "manifest:media-type": "application/vnd.oasis.opendocument.presentation",
        "manifest:version": "1.2",
      },
      Object {
        "manifest:full-path": "content.xml",
        "manifest:media-type": "text/xml",
      },
      Object {
        "manifest:full-path": "styles.xml",
        "manifest:media-type": "text/xml",
      },
    ],
    "manifest:version": "1.2",
    "xmlns:manifest": "urn:oasis:names:tc:opendocument:xmlns:manifest:1.0",
  },
}
`;

exports[`Document manifest returns the correct formatting for mimetype 2`] = `
Object {
  "manifest:manifest": Object {
    "manifest:file-entry": Array [
      Object {
        "manifest:full-path": "/",
        "manifest:media-type": "application/vnd.oasis.opendocument.presentation",
        "manifest:version": "1.2",
      },
      Object {
        "manifest:full-path": "content.xml",
        "manifest:media-type": "text/xml",
      },
      Object {
        "manifest:full-path": "styles.xml",
        "manifest:media-type": "text/xml",
      },
      Object {
        "manifest:full-path": "Presentation0/Thumbnails/thumbnail.png",
        "manifest:media-type": "image/png",
      },
      Object {
        "manifest:full-path": "Presentation0/Pictures/100000000000032000000258E080B12F.jpg",
        "manifest:media-type": "image/jpeg",
      },
      Object {
        "manifest:full-path": "Presentation0/Pictures/100002010000028200000040779DD47E.png",
        "manifest:media-type": "image/png",
      },
      Object {
        "manifest:full-path": "Presentation0/Pictures/1000000000000040000000400142E835.png",
        "manifest:media-type": "image/png",
      },
    ],
    "manifest:version": "1.2",
    "xmlns:manifest": "urn:oasis:names:tc:opendocument:xmlns:manifest:1.0",
  },
}
`;

exports[`Document mergeStyles merges style content from the presentation into the document style 1`] = `
Object {
  "office:document-styles": Object {
    "office:master-styles": Object {
      "style:master-page": Array [
        Object {
          "draw:frame": Array [
            Object {
              "draw:image": Object {
                "text:p": Object {},
                "xlink:actuate": "onLoad",
                "xlink:href": "Pictures/100000000000032000000258E080B12F.jpg",
                "xlink:show": "embed",
                "xlink:type": "simple",
              },
              "draw:layer": "backgroundobjects",
              "draw:style-name": "Mgr1",
              "draw:text-style-name": "MP1",
              "svg:height": "21cm",
              "svg:width": "28cm",
              "svg:x": "-0.001cm",
              "svg:y": "-0.001cm",
            },
            Object {
              "draw:layer": "backgroundobjects",
              "draw:text-box": Object {},
              "presentation:class": "title",
              "presentation:placeholder": "true",
              "presentation:style-name": "prs-novelty-title",
              "svg:height": "3.506cm",
              "svg:width": "23.911cm",
              "svg:x": "2.058cm",
              "svg:y": "1.943cm",
            },
            Object {
              "draw:layer": "backgroundobjects",
              "draw:text-box": Object {},
              "presentation:class": "outline",
              "presentation:placeholder": "true",
              "presentation:style-name": "prs-novelty-outline1",
              "svg:height": "13.23cm",
              "svg:width": "23.384cm",
              "svg:x": "2.285cm",
              "svg:y": "5.938cm",
            },
          ],
          "draw:style-name": "Mdp1",
          "presentation:notes": Object {
            "draw:frame": Object {
              "draw:layer": "backgroundobjects",
              "draw:text-box": Object {
                "draw:corner-radius": "3107.312cm",
              },
              "presentation:class": "notes",
              "presentation:placeholder": "true",
              "presentation:style-name": "prs-novelty-notes",
              "svg:height": "11.409cm",
              "svg:width": "14.517cm",
              "svg:x": "3.249cm",
              "svg:y": "14.13cm",
            },
            "draw:page-thumbnail": Object {
              "draw:layer": "backgroundobjects",
              "presentation:class": "page",
              "presentation:style-name": "prs-novelty-title",
              "svg:height": "10.279cm",
              "svg:width": "13.705cm",
              "svg:x": "3.647cm",
              "svg:y": "2.853cm",
            },
            "style:page-layout-name": "PM2",
          },
          "style:name": "prs-novelty",
          "style:page-layout-name": "PM1",
        },
      ],
    },
    "office:styles": Object {
      "style:presentation-page-layout": Array [
        Object {
          "presentation:placeholder": Array [
            Object {
              "presentation:object": "title",
              "svg:height": "3.507cm",
              "svg:width": "23.912cm",
              "svg:x": "2.058cm",
              "svg:y": "1.743cm",
            },
            Object {
              "presentation:object": "subtitle",
              "svg:height": "13.23cm",
              "svg:width": "23.912cm",
              "svg:x": "2.058cm",
              "svg:y": "5.838cm",
            },
          ],
          "style:name": "AL1T0",
        },
        Object {
          "presentation:placeholder": Array [
            Object {
              "presentation:object": "title",
              "svg:height": "3.507cm",
              "svg:width": "23.912cm",
              "svg:x": "2.058cm",
              "svg:y": "1.743cm",
            },
            Object {
              "presentation:object": "outline",
              "svg:height": "13.23cm",
              "svg:width": "23.912cm",
              "svg:x": "2.058cm",
              "svg:y": "5.838cm",
            },
          ],
          "style:name": "AL2T1",
        },
      ],
    },
    "xmlns:anim": "urn:oasis:names:tc:opendocument:xmlns:animation:1.0",
    "xmlns:chart": "urn:oasis:names:tc:opendocument:xmlns:chart:1.0",
    "xmlns:dc": "http://purl.org/dc/elements/1.1/",
    "xmlns:dom": "http://www.w3.org/2001/xml-events",
    "xmlns:dr3d": "urn:oasis:names:tc:opendocument:xmlns:dr3d:1.0",
    "xmlns:draw": "urn:oasis:names:tc:opendocument:xmlns:drawing:1.0",
    "xmlns:drawooo": "http://openoffice.org/2010/draw",
    "xmlns:fo": "urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0",
    "xmlns:form": "urn:oasis:names:tc:opendocument:xmlns:form:1.0",
    "xmlns:grddl": "http://www.w3.org/2003/g/data-view#",
    "xmlns:math": "http://www.w3.org/1998/Math/MathML",
    "xmlns:meta": "urn:oasis:names:tc:opendocument:xmlns:meta:1.0",
    "xmlns:number": "urn:oasis:names:tc:opendocument:xmlns:datastyle:1.0",
    "xmlns:of": "urn:oasis:names:tc:opendocument:xmlns:of:1.2",
    "xmlns:office": "urn:oasis:names:tc:opendocument:xmlns:office:1.0",
    "xmlns:officeooo": "http://openoffice.org/2009/office",
    "xmlns:ooo": "http://openoffice.org/2004/office",
    "xmlns:oooc": "http://openoffice.org/2004/calc",
    "xmlns:ooow": "http://openoffice.org/2004/writer",
    "xmlns:presentation": "urn:oasis:names:tc:opendocument:xmlns:presentation:1.0",
    "xmlns:rpt": "http://openoffice.org/2005/report",
    "xmlns:script": "urn:oasis:names:tc:opendocument:xmlns:script:1.0",
    "xmlns:smil": "urn:oasis:names:tc:opendocument:xmlns:smil-compatible:1.0",
    "xmlns:style": "urn:oasis:names:tc:opendocument:xmlns:style:1.0",
    "xmlns:svg": "urn:oasis:names:tc:opendocument:xmlns:svg-compatible:1.0",
    "xmlns:table": "urn:oasis:names:tc:opendocument:xmlns:table:1.0",
    "xmlns:tableooo": "http://openoffice.org/2009/table",
    "xmlns:text": "urn:oasis:names:tc:opendocument:xmlns:text:1.0",
    "xmlns:xhtml": "http://www.w3.org/1999/xhtml",
    "xmlns:xlink": "http://www.w3.org/1999/xlink",
  },
}
`;
